--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#two" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/homescreen.png" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/homescreen.PNG" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
@@ -45,21 +45,21 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/snap2.png" alt="" /></div>
+						<div class="image"><img src="images/snap2.PNG" alt="" /></div>
 						<div class="content">
 							<h3>Multiple Common Scenarios</h3>
 							<p>Several common bleep scenarios covering the main topics you'll get bleeped for during a routine on call shift as a junior doctor and how to address them.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/snap4.png" alt="" /></div>
+						<div class="image"><img src="images/snap4.PNG" alt="" /></div>
 						<div class="content">
 							<h3>A Structured Approach</h3>
 							<p>Spin The Bleep lets you practice a structured,  systematic approach - working step-by-step through causes, history, examination, investigation and management.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/snap3.png" alt="" /></div>
+						<div class="image"><img src="images/snap3.PNG" alt="" /></div>
 						<div class="content">
 							<h3>Created By Doctors</h3>
 							<p>Made by junior doctors for junior doctors. We teach what you need for your level, ensuring all scenarios are based on real-life experience and directly relevant to you.</p>
