--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 					to prepare you for life on the wards!</p>
 
 					
-					<a href=''><img alt='Get it on Google Play' src='images/appstorebadge.png', class="imagecta" /></a>
+					<a href='https://apps.apple.com/gb/app/spin-the-bleep/id1528169829' target = "_blank"><img alt='Get it on the Apple Store' src='images/appstorebadge.png' , class="imagecta" /></a>
 
-					<a href='https://play.google.com/store/apps/details?id=io.github.ljt13.spin_the_bleep&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='images/googlebadge.png', class="imagecta" /></a>
+					<a href='https://play.google.com/store/apps/details?id=io.github.ljt13.spin_the_bleep&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target = "_blank"><img alt='Get it on Google Play' src='images/googlebadge.png', class="imagecta" /></a>
 
 
 
