--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<meta property='og:image' content='http://spinthebleep.com/images/facebookpromo.png'/>
+		
 		<meta property="og:title" content="Spin The Bleep: Medical Education" />
 		<meta property="og:description" content="A flashcard-based medical education app for junior docs" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="http://spinthebleep.com/" />
+		<meta property='og:image' content="http://spinthebleep.com/images/facebookpromo.png"/>
+
 	</head>
 	<body class="is-preload">
 
